--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+TITLE: INSPIRE Devscripts
 #+AUTHOR: Tibor Simko
 #+EMAIL: tibor.simko@cern.ch
-#+DATE: <2011-07-01 Fri>
+#+DATE: <2012-12-06 Thu>
 #+DESCRIPTION: A collection of scripts useful for INSPIRE development.
 #+KEYWORDS: invenio, inspire, development, scripts
 #+LANGUAGE: en
@@ -31,15 +31,19 @@ mentioned there, you may also want to tweak:
 ** inspire-recreate-demo-site
 
 Having a running Invenio installation, run this command to erase given
-Invenio instance and reinstall new fresh INSPIRE demo site.  For
-example, on a personal SLC5 box used for development, you can run this
-command with the following ultra dangerous options:
+Invenio instance and reinstall new fresh INSPIRE demo site.
+
+For example, here are commands to run in order to set up a completely
+new virtualenv environment called =inspire-maint-1.1= that will run
+INSPIRE demo site on top of Invenio =maint-1.1= branch:
 
 #+BEGIN_SRC sh
-CFG_INVENIO_SRCDIR=/opt/simko/src/invenio \
-CFG_INSPIRE_SRCDIR=/opt/simko/src/inspire \
-CFG_INVENIO_HOSTNAME=pcuds123456 \
-CFG_INVENIO_USER=apache \
+cd ~/private/src/invenio
+git checkout maint-1.1
+mkvirtualenv --system-site-packages inspire-maint-1.1
+invenio-initialise-virtualenv inspire-maint-1.1 --yes-i-know
+deactivate && workon inspire-maint-1.1
+invenio-recreate-demo-site --yes-i-know
 inspire-recreate-demo-site --yes-i-know
 #+END_SRC
 
