inspire-recreate-demo-site: configurable bibtask user
* When submitting initial bibtask jobs, use configurable
  task user as specified by CFG_INSPIRE_BIBTASK_USER.
  This fixes site building after recent change in INSPIRE
  repository (see commit cd832c6c50095160edb3a828bd537dc9f4c6e9d8
  there).

--- a/README.org
+++ b/README.org
@@ -23,8 +23,9 @@ See =invenio-devscripts= repository instructions; the same applies
 here.  In addition to the configuration environment variables
 mentioned there, you may also want to tweak:
 
-| Variable           | Documentation              | Default value         |
-| CFG_INSPIRE_SRCDIR | where are INSPIRE sources? | ~/private/src/inspire |
+| Variable                 | Documentation                    | Default value         |
+| CFG_INSPIRE_SRCDIR       | where are INSPIRE sources?       | ~/private/src/inspire |
+| CFG_INSPIRE_BIBTASK_USER | submit initial bibtasks as whom? | admin                 |
 
 * Usage
 
